# notebooklm-cdp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/notebooklm_cdp/: __init__.py  auth.py  cli.py  notes.py
